--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <header class="info transparentcontainer">
+        <button class="supportbnt">24/7</button>
+        <header class="info header">
                 <img class="image"
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEf9TLvknwxC8gMsWGGa17ASX8iEHMfMvIbw&s"
             alt="My Photo">
@@ -25,7 +26,7 @@
                 Telegram</a>
             </div>
         </header>
-        <div class="transparentcontainer">
+        <div class="header">
         <h1>Usmon Saidiy</h1>
         <p><b>Junior</b> developer</p>
         </div>
@@ -47,7 +48,7 @@
                         <li>Rout control</li>
                     </ul>
                 </div>
-            <div  class="card2 flex2">
+            <div  class="card1 flex2">
                 <h2>
                     Work Expiriense
                 </h2>
@@ -78,7 +79,7 @@
                     </tr>
                    </table>
                 </div>
-                <div class="card3 flex3">
+                <div class="card1 flex3">
                     <h2>
                         My hobbies
                     </h2>
@@ -119,7 +120,7 @@
              <div>
                 <label for="message">Message</label>
                 <br>
-                <textarea cols="92"rows="5" placeholder="Type your message"></textarea>
+                <textarea cols="46"rows="5" placeholder="Type your message"></textarea>
                 <br> 
                    <!-- <input type="submit" value="Send">   -->
                  <a href="#" class="btn">Send</a>
